# skatebit-app

./: .gitignore  .prettierignore  .prettierrc  README.md  package.json  svelte.config.js  tsconfig.json  vercel.json  vite.config.js
.github/workflows/: cache-maps.yml
admin/cache/: +server.ts
scripts/: runCache.ts
src/: app.css  app.html  global.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  fs_commands.rs  installer_commands.rs  lib.rs  map_commands.rs  mod_commands.rs  models.rs  path_finder.rs  state.rs  utils.rs  watcher.rs
src/lib/: index.ts
src/lib/actions/: draggable.ts
src/lib/api/: cache.ts  constants.ts  modio.ts  modioCache.ts  modioConfig.ts  modioConstants.ts  modioFetch.ts
src/lib/components/: BaseCard.svelte  CreateFolderPrompt.svelte  CrudManager.svelte  CrudModal.svelte  DropOverlay.svelte  DropZone.svelte  FileActions.svelte  FileList.svelte  FolderSelector.svelte  GlobalDropOverlay.svelte  GoogleLogin.svelte  ListToolBar.svelte  LocalMapCard.svelte  LocalMapList.svelte  LoginAvatar.svelte  LoginButtonGoogle.svelte  MapCard.svelte  MapList.svelte  ModalManager.svelte  NavBar.svelte  PathHeader.svelte  SetGamePath.svelte  SortBadges.svelte  TabSwitcher.svelte  ThemeController.svelte  Toast.svelte  ToastManager.svelte  Updater.svelte  UserProfileCard.svelte
src/lib/features/explorer/: ExplorerLayout.svelte  tabs.ts
src/lib/features/explorer/components/: FileActions.svelte  FileList.svelte  PathHeader.svelte  TabSwitcher.svelte  index.ts
src/lib/features/modio/: LocalMapsSection.svelte  ModioLayout.svelte  ModioSection.svelte
src/lib/features/modio/components/: BaseCard.svelte  GenericCard.svelte  ListToolBar.svelte  LocalMapCard.svelte  LocalMapList.svelte  MapCard.svelte  MapList.svelte  SortBadges.svelte  index.ts
src/lib/features/mods/: ModsLayout.svelte
src/lib/features/mods/components/: LocalModCard.svelte  LocalModList.svelte  ModCard.svelte  ModList.svelte
src/lib/features/stats/: StatsLayout.svelte
src/lib/features/stats/components/: ConfigEditForm.svelte  (+9 more)
src/lib/firebase/: configs.ts  firebase.ts  users.ts
src/lib/services/: directoryService.ts  dragDropService.ts  fileService.ts  modioCacheService.ts  modioService.ts  modsService.ts  pathService.ts  symlinkService.ts
src/lib/stores/: authStore.ts  directoryStore.ts  dndStore.ts  downloadProgressStore.ts  explorerStore.ts  folderStore.ts  globalPathsStore.ts  localMaps.ts  localMapsSearchStore.ts  localMapsStore.ts  localSearchStore.ts  mapsFolderStore.ts  mapsStore.ts  modSearchStore.ts  modalStore.ts  modioMapsStore.ts  modioSearchStore.ts  modioStore.ts  modsSearchStore.ts  modsStore.ts  searchStore.ts  toastStore.ts  uiStore.ts  uploadFormStore.ts
src/lib/ts/: dragDrop.ts  draggable.ts  errorHandler.ts  fsOperations.ts  modApi.ts  modUtils.ts  pathUtils.ts  symlinkHelper.ts
src/lib/types/: downloadTypes.ts  fsTypes.ts  modio.ts  modioTypes.ts  searchTypes.ts  uiTypes.ts
src/lib/utils/: errorHandler.ts  flexSearchUtils.ts  formatter.ts  initSkaterXLPath.ts  localFlexSearch.ts  modioFlexSearch.ts  tauriStore.ts  toastUtils.ts  useFileUpload.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/admin/: +server.ts
src/routes/admin/cache/: +server.ts
src/routes/api/maps/: +server.ts
src/routes/cache/: +page.svelte
src/routes/dashboard/: +page.svelte
src/routes/modio/: +page.server.ts  +page.svelte
src/routes/mods/: +page.server.ts  +page.svelte
src/routes/stats/: +page.svelte
