[package]
name = "XLFM"
version = "1.1.7"
description = "Skater XL File Manager"
authors = ["Milky"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
trash = "3.0"
zip = "0.6"
anyhow = "1.0"
tauri-plugin-opener = "2"
log = "0.4"
env_logger = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
reqwest = { version = "0.11", features = ["json"] }
directories = "4.0"
notify = "8.0.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
once_cell = "1.21.3"
thiserror = "1.0"
junction = "1.2"
tauri-plugin-process = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
warp = "0.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
