[package]
name = "XLFM"
version = "1.3.0-beta.0"
description = "Skater XL File Manager"
authors = ["Milky"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.5.2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-single-instance = "2"
trash = "3.0"
zip = "0.6"
anyhow = "1.0"
tauri-plugin-opener = "2"
log = "0.4"
env_logger = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-deep-link = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
reqwest = { version = "0.11", features = ["json"] }
directories = "4.0"
notify = "8.0.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
once_cell = "1.21.3"
thiserror = "1.0"
junction = "1.2"
regex = "1.11.1"
dirs = "6.0.0"
url = "2.5.4"
percent-encoding = "2"
steamlocate = "2.0.1"
dotenvy = "0.15.7"
tauri-plugin-http = "2.5.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

